--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,55 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>{% block title %}{% endblock %}</title>
-    </head>
-    <body>
-        <h1>Yung's Website</h1>
-        {% block content %}
-        {% endblock %}
-    </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+Design by TEMPLATED
+http://templated.co
+Released for free under the Creative Commons Attribution License
+
+Name       : Plushiness 
+Description: A two-column, fixed-width design with dark color scheme.
+Version    : 1.0
+Released   : 20131117
+
+Website by Yung Han Jeong
+https://new link here
+Personal Website for Protfolio and Resume
+
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title></title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+<link href="static/default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="static.fonts.css" rel="stylesheet" type="text/css" media="all" />
+
+<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+
+</head>
+<body>
+<div id="header-wrapper">
+	<div id="header" class="container">
+		<div id="logo">
+			<span class="icon icon-group"></span>
+			<h1><a href="#">Yung Han Jeong</a></h1>
+			<span>Engineer & <a href="http://templated.co" rel="nofollow">Data Scientist</a></span>
+		</div>
+		<div id="triangle-up"></div>
+	</div>
+</div>
+<div id="menu-wrapper">
+		<div id="menu">
+			<ul>
+				<li class="current_page_item"><a href="#" accesskey="1" title="">Home</a></li>
+				<li><a href="127.0.0.1/about/" accesskey="2" title="">About</a></li>
+				<li><a href="#" accesskey="3" title="">Portfolio</a></li>
+				<li><a href="#" accesskey="4" title="">Contact</a></li>
+			</ul>
+		</div>
+</div>
+</body>
+<body>
+    <h1>{{content}}</h1>
+</body>
 </html>
