--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,10 @@ Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
 Released   : 20131117
 
+Website by Yung Han Jeong
+https://new link here
+Personal Website for Protfolio and Resume
+
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -28,8 +32,8 @@ Released   : 20131117
 	<div id="header" class="container">
 		<div id="logo">
 			<span class="icon icon-group"></span>
-			<h1><a href="#">Plushiness</a></h1>
-			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a></span>
+			<h1><a href="#">Yung Han Jeong</a></h1>
+			<span>Engineer & <a href="http://templated.co" rel="nofollow">Data Scientist</a></span>
 		</div>
 		<div id="triangle-up"></div>
 	</div>
@@ -37,14 +41,14 @@ Released   : 20131117
 <div id="menu-wrapper">
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
-				<li><a href="#" accesskey="3" title="">About Us</a></li>
-				<li><a href="#" accesskey="4" title="">Careers</a></li>
-				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+				<li class="current_page_item"><a href="#" accesskey="1" title="">Home</a></li>
+				<li><a href="#" accesskey="2" title="">About</a></li>
+				<li><a href="#" accesskey="3" title="">Portfolio</a></li>
+				<li><a href="#" accesskey="4" title="">Contact</a></li>
 			</ul>
 		</div>
 </div>
+
 <div id="wrapper">
 	<div id="featured-wrapper">
 	
